# 01-github-backlog-issues

./: .env.example  .gitignore  DASHBOARD_PRD.md  Dockerfile  Dockerfile.airflow  Dockerfile.metabase  README.md  dashboard-design.md  docker-compose.yml  ingestion-docs.md  pyproject.toml
config/: simple_auth_manager_passwords.example.json
dags/: github_issues_ingestion_v1.py
docs/: github_issues_api_to_json_demo.py  github_issues_duckdb_cli_demo.sql  github_rest_api_walkthrough.http
gitpulse/: runtime.py
gitpulse/bronze/: extract_issues.py
gitpulse/dashboard/: setup_metabase.py
gitpulse/dq/: run_checks.py
gitpulse/gold/: build_gold_marts.py
gitpulse/silver/: process_bronze_to_silver.py
scripts/: smoke_test.py
src/dashboard/: setup_metabase.py
src/dq/: run_checks.py
src/gold/: build_gold_marts.py
src/silver/: process_bronze_to_silver.py
tests/: conftest.py  test_bronze.py  test_dag.py  test_dq_unit.py  test_pipeline.py  test_pipeline_local.py
